fix: arrow svg doing wierd things on safari

--- a/components/game-card/style.module.css
+++ b/components/game-card/style.module.css
@@ -130,18 +130,24 @@ svg.catalog-badge {
   margin: auto 0;
   margin-right: var(--margin-02);
   white-space: nowrap;
-  position: relative;
-  display: grid;
-  grid-template-columns: min-content min-content;
-}
-
-.game-call-to-action-text {
   background: var(--yellow);
   color: var(--black);
   padding: var(--margin-q) var(--margin-02);
   border-radius: var(--margin-01) 0 0 var(--margin-01);
-  white-space: nowrap;
   position: relative;
+}
+
+.game-call-to-action::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(100%, -50%);
+  height: 100%;
+  width: auto;
+  aspect-ratio: 1 / 2;
+  clip-path: polygon(0 0, 100% 50%, 0 100%);
+  background: var(--yellow);
 }
 
 .game-actions-links {
@@ -174,12 +180,6 @@ a.game-action {
 
 .game-actions-links a:hover {
   color: var(--yellow);
-}
-
-.game-call-to-action svg {
-  width: auto;
-  color: var(--yellow);
-  height: 100%;
 }
 
 @media screen and (max-width: 600px) {
